@@ -37,10 +37,10 @@ typedef std::pair<QString, QStringList*> GroupMemberPair;
 
 inline QFutureWatcher<QString> g_fwToolTip;
 inline QFutureWatcher<QString> g_fwToolTipInfo;
-inline QFutureWatcher<QList<PackageListData> *> g_fwPacman;
-inline QFutureWatcher<QList<PackageListData> *> g_fwForeignPacman;
-inline QFutureWatcher<QSet<QString> *> g_fwUnrequiredPacman;
-inline QFutureWatcher<GroupMemberPair>          g_fwPacmanGroup;
+inline QFutureWatcher<QList<PackageListData> *> g_fwXBPS;
+//inline QFutureWatcher<QList<PackageListData> *> g_fwForeignPacman;
+inline QFutureWatcher<QSet<QString> *> g_fwUnrequiredXBPS;
+//inline QFutureWatcher<GroupMemberPair>          g_fwPacmanGroup;
 inline QFutureWatcher<QList<PackageListData> *> g_fwRemote;
 inline QFutureWatcher<QList<PackageListData> *> g_fwRemoteMeta;
 inline QFutureWatcher<QMap<QString, OutdatedPackageInfo> *> g_fwOutdatedList;
@@ -51,11 +51,11 @@ inline QFutureWatcher<TransactionInfo> g_fwTargetUpgradeList;
 QString showPackageInformation(QString pkgName);
 TransactionInfo getTargetUpgradeList(const QString &pkgName);
 QList<PackageListData> * searchPkgPackages();
-QSet<QString> * searchUnrequiredPacmanPackages();
+QSet<QString> * searchUnrequiredXBPSPackages();
 QList<PackageListData> * searchForeignPackages();
 QList<PackageListData> * searchRemotePackages(QString searchString);
-QString searchPacmanPackagesByFile(const QString &file);
-GroupMemberPair          searchPacmanPackagesFromGroup(QString groupName);
+QString searchXBPSPackagesByFile(const QString &file);
+//GroupMemberPair          searchPacmanPackagesFromGroup(QString groupName);
 QMap<QString, OutdatedPackageInfo> * getOutdatedList();
 QString getLatestDistroNews();
 
